--- a/signin.html
+++ b/signin.html
@@ -22,7 +22,7 @@
 			<br>
 		</ul>
 	   <p><input type="submit" value="Trimite" 
-			title="Apasati butonul pentru a expedia datele spre server" /> </p>
+			title="Trimite" /> </p>
 	</form> 
 </body>
 </html>
