--- a/signin.html
+++ b/signin.html
@@ -3,7 +3,7 @@
 <head>
 <title>Sign In</title>
 </head>
-<h1>Completati formularul pentru inscriere</h1>
+<h1>Completati formularul pentru inscrierea in aplicatie</h1>
 <body>
 
 	<form> 
