--- a/loginadmin.html
+++ b/loginadmin.html
@@ -14,6 +14,9 @@
 			<li><label for="parola">Parola:<br><br>
 			</label> <input type="password" name="pass" id="pass" value="" /></li>
 			<br>
+			<li><label for="confirmare">Confirmati parola introdusa:<br><br>
+			</label> <input type="password" name="pwd" id="pwd" value="" /></li>
+			<br>
 		</ul>
 	   <p><input type="submit" value="Trimite" title="Trimite" /> </p>
 	</form> 
