--- a/filtrare.html
+++ b/filtrare.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8" />
@@ -22,19 +23,18 @@
 					</ul>
 						  
 			  </div>
-			  
-			
+			  <br>
+			<h1>Alegeti dupa ce doriti sa faceti filtrarea:</h1>
 			<div>
 				<form action="paginare.php"> 
 						<ul>
-							<label for="filtrare">Alegeti dupa ce doriti sa faceti filtrarea:<br><br>
-							</label> <input type="radio" name="filtrare" id="filtrare" value="Ordonat crescator" checked> Ordonat crescator<br> </li>
+							</label> <input type="radio" name="filtrare" id="filtrare" value="Cele mai vizitate tari" checked> Cele mai vizitate tari <br> </li>
+							</label> <input type="radio" name="filtrare" id="filtrare" value="Ordonat crescator"> Ordonat crescator<br> </li>
 							</label> <input type="radio" name="filtrare" id="filtrare" value="Ordonat descrescator"> Ordonat descrescator<br> </li>
-							</label> <input type="radio" name="filtrare" id="filtrare" value="Cele mai vizitate tari"> Cele mai vizitate tari <br> </li>
+
 						<p><input type="submit" value="Trimite" 
 							title="Apasati butonul pentru a expedia datele spre server" /> </p>
 						</ul>
-				  <
 				</form>
 			</div>
 			
