--- a/login.html
+++ b/login.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Log In</title>
+<title>Loginform</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="login.css" type="text/css" media="screen">
 </head>
-<h1>Logarea in aplicatie</h1>
+
 <body>
 
-	<form> 
-	  	<ul>
-			<li><label for="email">Adresa de e-mail:<br><br>
-			</label> <input type="text" name="email" id="email" value="" /></li>
-			<br>
-			<li><label for="parola">Parola:<br><br>
-			</label> <input type="password" name="pass" id="pass" value="" /></li>
-			<br>
-			<li><label for="confirmare">Confirmati parola introdusa:<br><br>
-			</label> <input type="password" name="pwd" id="pwd" value="" /></li>
-			<br>
-		</ul>
-	   <p><input type="submit" value="Trimite" title="Trimite" /> </p>
-	</form> 
+<main>
+<br>
+<h1>Login user</h1>
+<form action="login.php">
+
+  <div class="container">
+    <label><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" id="email" name="email" required>
+
+    <label><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" id="psw" name="psw" required>
+
+    <button type="submit">Login</button>
+    <input type="checkbox" checked="checked"> Remember me
+
+    <span class="psw">Forgot <a href="#">password?</a></span>
+
+  </div>
+
+  <br>
+</form>
+</main>
 </body>
 </html>
