--- a/meniu_admin.html
+++ b/meniu_admin.html
@@ -13,7 +13,8 @@
 			<div>
 			<div style="margin: 0 auto; width: auto; text-align: center;">
 			<button class="button"><a href = "adaugare_suvenir.html"><span>Adauga suvenir</span></a></button>
-			<button class="button"><a href = "filtare_suvenir.html.html"><span>Sterge suvenir</span></a></button>
+			<button class="button"><a href = "stergere_suvenir.html"><span>Sterge suvenir</span></a></button>
+			<button class="button"><a href = "listare_suvenir.html"><span>Listare suvenir</span></a></button>
 			</div>
 	<br>
     </header>
@@ -22,3 +23,4 @@
 
 </body>
 </html>
+
