--- a/adaugare_suvenir.html
+++ b/adaugare_suvenir.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,42 +7,38 @@
 </head>
 <body>
 <main>
-	<header>
-		
-		<br>
-		<h1>Completati formularul pentru adaugarea unui suvenir in baza de date</h1>
-		<form> 
-		<div>
-	  	<ul>
-			
-			<label for="id">Id suvenir:<br>
-			</label> <input type="number" name="id" id="id" value="" />
-			<br><br>
-			<label for="nume">Nume suvenir:<br>
-			</label> <input type="text" name="nume" id="nume" value="" />
-			<br><br>
-			<label for="id_tara">Id tara:<br>
-			</label> <input type="number" name="id_tara" id="id_tara" value="" />
-			<br><br>
-			<label for="id_punct">Id punct de interes:<br>
-			</label> <input type="number" name="id_punct" id="id_punct" value="" />
-			<br><br>
-			<label for="profil">Profil beneficiar:<br>
-			</label> <input type="text" name="profil" id="profil" value="" />
-			<br><br>
-			<label for="inceput_perioada">Inceput perioada:<br>
-			</label> <input type="date" name="inceput_perioada" id="inceput_perioada" value="" />
-			<br><br>
-			<label for="sfarsit_perioada">Sfarsit perioada:<br>
-			</label> <input type="date" name="sfarsit_perioada" id="sfarsit_perioada" value="" />
-			<br><br>
-			<label for="cultura">Cultura:<br>
-			</label> <input type="text" name="cultura" id="cultura" value="" />
-			<br><br>
-			<label><input type="submit" value="Trimite" title="Trimite" /> </label>
-		</ul>
-	<br>
-	</form> 
+ <header>
+
+  <br>
+  <h1>Completati formularul pentru adaugarea unui suvenir in baza de date</h1>
+  <form action="adaugare_suvenir.php">
+  <div>
+    <ul>
+   <label for="nume">Nume suvenir:<br>
+   </label> <input type="text" name="nume" id="nume" value="" />
+   <br><br>
+   <label for="profil">Profil beneficiar:<br>
+   </label> <input type="text" name="profil" id="profil" value="" />
+   <br><br>
+   <label for="id_tara">Id tara:<br>
+   </label> <input type="number" name="id_tara" id="id_tara" value="" />
+   <br><br>
+   <label for="inceput_perioada">Inceput perioada:<br>
+   </label> <input type="date" name="inceput_perioada" id="inceput_perioada" value="" />
+   <br><br>
+   <label for="sfarsit_perioada">Sfarsit perioada:<br>
+   </label> <input type="date" name="sfarsit_perioada" id="sfarsit_perioada" value="" />
+   <br><br>
+   <label for="cultura">Cultura:<br>
+   </label> <input type="text" name="cultura" id="cultura" value="" />
+   <br><br>
+   <label for="pret">Pret:<br>
+   </label> <input type="number" name="pret" id="pret" value="" />
+   <br><br>
+   <label><input type="submit" value="Trimite" title="Trimite" /> </label>
+  </ul>
+ <br>
+ </form>
 </main>
 </body>
 </html>
