--- a/filtrare.html
+++ b/filtrare.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8" />
@@ -26,7 +25,7 @@
 			  <br>
 			<h1>Alegeti dupa ce doriti sa faceti filtrarea:</h1>
 			<div>
-				<form action="paginare.php"> 
+				<form action="filtrare_rezultate.php"> 
 						<ul>
 							</label> <input type="radio" name="filtrare" id="filtrare" value="Cele mai vizitate tari" checked> Cele mai vizitate tari <br> </li>
 							</label> <input type="radio" name="filtrare" id="filtrare" value="Ordonat crescator"> Ordonat crescator<br> </li>
