--- a/formular.html
+++ b/formular.html
@@ -4,80 +4,107 @@
 <meta charset="utf-8" />
  <title>SouR</title>
  <meta name="viewport" content="width=device-width, initial-scale=1">
- 
+
   <link rel="stylesheet" href="styles_formular.css" type="text/css" media="screen">
 
 </head>
- 
+
 <body>
 <main>
-<header>
 
-	<div class="container">
-	
-	  	
+
 		<div class="menu">
      <ul id="meniu-ul">
-        <li id="meniu-li"><a href="#cont">Contul meu</a></li>
-        <li id="meniu-li"><a href="formular.html">Formular</a></li>
-        <li id="meniu-li"><a href="filtrare.html">Statistici</a></li>
-        <li id="meniu-li"><a href="#deconectare">Deconectare</a></li>
-		
+	 <li id="meniu-li"><img src="logo.png" alt="logo"></li>
+        <li id="meniu-li"><a href="acasa.php"> Acasa</a></li>
+		<li id="meniu-li"><a href="contulmeu.html">Contul meu</a></li>
+		<li id="meniu-li"><a href="formular.html">Formular</a></li>
+		<li id="meniu-li"><a href="filtrare.html">Statistici</a></li>
+		<li id="meniu-li"><a href="deconectare.html">Deconectare</a></li>
+
      </ul>
         <h1>Completati formularul pentru recomandarea unui suvenir</h1>
      </div>
-     
-   <img src="home.png" alt="home">
-   <div class="center">
-   
-    <form action="paginare.php"> 
+
+   <div>
+
+     <form method="post" action="formular.php">
       <ul>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-			<li><label for="tara">Tara in care se va calatori:<br><br>
-			</label> <input type="text" name="tara" id="tara" value="" /></li>
+			<label for="tara">Alegeti tara in care se va calatori:<br>
+			<select name="tara" id="tara">
+            <option value="Franta">Franta</option>
+            <option value="Romania">Romania</option>
+            <option value="Italia">Italia</option>
+            <option value="Marea Britanie">Marea Britanie</option>
+            <option value="Olanda">Olanda</option>
+            <option value="Portugalia">Portugalia</option>
+            <option value="Spania">Spania</option>
+			<option value="Germania">Germania</option>
+            <option value="Polonia">Polonia</option>
+            <option value="Turcia">Turcia</option>
+            <option value="Grecia">Grecia</option>
+            <option value="Ungaria">Ungaria</option>
+			<option value="Belgia">Belgia</option>
+            <option value="Finlanda">Finlanda</option>
+            <option value="Austria">Austria</option>
+            <option value="Australia">Australia</option>
+            <option value="Canada">Canada</option>
+            <option value="China">China</option>
+            <option value="Japonia">Japonia</option>
+			<option value="Egipt">Egipt</option>
+            <option value="Estonia">Estonia</option>
+            <option value="India">India</option>
+            <option value="Indonesia">Indonesia</option>
+            <option value="Iran">Iran</option>
+			<option value="Mexic">Mexic</option>
+			<option value="Scotia">Scotia</option>
+            <option value="Norvegia">Norvegia</option>
+            <option value="Suedia">Suedia</option>
+            <option value="Rusia">Rusia</option>
+            <option value="Coreea">Coreea</option>
+            <option value="Israel">Israel</option>
+            <option value="Thailanda">Thailanda</option>
+			<option value="SUA">SUA</option>
+            <option value="Columbia">Columbia</option>
+            <option value="Irlanda">Irlanda</option>
+            <option value="Argentina">Argentina</option>
+            <option value="Cehia">Cehia</option>
+			<option value="Elvetia">Elvetia</option>
+            <option value="Danemarca">Danemarca</option>
+            <option value="Lituania">Lituania</option>
+			</select>
+			<br><br>
+			<label for="data">Data la care se va calatori:<br>
+			</label> <input type="date" name="data" id="data" value="" />
+			<br><br>
+			<label for="profil">Alegeti un beneficiar:<br>
+			<select name= "profil" id="profil">
+            <option value="fiu">Fiu</option>
+            <option value="fiica">Fiica</option>
+            <option value="sot">Sot</option>
+            <option value="sotie">Sotie</option>
+            <option value="bunic">Bunic</option>
+            <option value="bunica">Bunica</option>
+            <option value="frate">Frate</option>
+			<option value="sora">Sora</option>
+            <option value="nepot">Nepot</option>
+            <option value="nepoata">Nepoata</option>
+            <option value="prieten">Prieten</option>
+            <option value="Prietena">Prietena</option>
+        </select>
 			<br>
-			<li><label for="data">Data la care se va calatori:<br><br>
-			</label> <input type="date" name="data" id="data" value="" /></li>
-			<br>
-			<li><label for="beneficiar">Alegeti pentru cine va fi suvenirul:<br><br>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="fiu" checked> Fiu<br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="fiica"> Fiica<br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="sot"> Sot <br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="sotie"> Sotie <br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="bunic"> Bunic <br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="bunica"> Bunica <br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="frate"> Frate <br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="sora"> Sora <br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="nepot"> Nepot <br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="nepoata"> Nepoata <br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="prieten"> Prieten <br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="prietena"> Prietena <br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="coleg"> Coleg <br> </li>
-			</label> <input type="radio" name="beneficiar" id="beneficiar" value="colega"> Colega <br> </li>
-			<br>
-      </ul>
-      <p><input type="submit" value="Trimite" 
+			<p><input type="submit" value="Trimite"
        title="Apasati butonul pentru a expedia datele spre server" /> </p>
+      </ul>
     </form>
-   </div>
-	</header>
+				<footer>
+					<p id="contact">
+					Contact: adminsour@sour.com
+					<br>
+					Nr. telefon: +40 0751 123 234
+					</p>
+	</footer>
+
 </main>
 </body>
 </html>
