--- a/filtrare.html
+++ b/filtrare.html
@@ -14,7 +14,7 @@
 				<div class="menu">
 					<ul id="meniu-ul">
 					<li id="meniu-li"><img src="logo.png" alt="logo"></li>
-						<li id="meniu-li"><a href="acasa.html"> Acasa</a></li>
+						<li id="meniu-li"><a href="acasa.php"> Acasa</a></li>
 						<li id="meniu-li"><a href="contulmeu.html">Contul meu</a></li>
 						<li id="meniu-li"><a href="formular.html">Formular</a></li>
 						<li id="meniu-li"><a href="filtrare.html">Statistici</a></li>
