--- a/listare_suvenir.html
+++ b/listare_suvenir.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Adaugare suvenir</title>
+<title>Listare suvenir</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="styles.css" type="text/css" media="screen">
 </head>
 <body>
 <main>
 	<header>
-		<div class="menu">
+	<div class="menu">
 
 						<ul id="meniu-ul">
 
@@ -19,16 +19,16 @@
 							<li id="meniu-li"><a href="listare_suvenir.html">Listare suvenir</a></li>
 							<li id="meniu-li"><a href="deconectare_admin.html">Deconectare</a></li>
 						</ul>
-							  
+
 				  </div>
 
 		<br>
 		<h1>Interogare baza de date</h1>
-				<form action="paginare_suvenir.php"> 
+				<form action="listare_suvenir.php">
 				<p>Pentru a afla informatii despre suvenir, apasati butonul trimite</p>
 					<p><input type="submit" value="Trimite" id="buton" title="Apasati butonul pentru a expedia datele spre server" /> </p>
 				</form>
-	 
+
 </main>
 </body>
 </html>
