--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>Loginform</title>
+<title>Login</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="login.css" type="text/css" media="screen">
 </head>
@@ -12,7 +12,7 @@
 <main>
 <br>
 <h1>Login user</h1>
-<form action="login.php">
+<form method="post" action="login.php">
 
   <div class="container">
     <label><b>Email</b></label>
