--- a/loginadmin.html
+++ b/loginadmin.html
@@ -9,7 +9,7 @@
 <main>
 <br>
 	<h1>Login admin</h1>
-	<form action="loginadmin.php">
+	<form method="post" action="loginadmin.php">
 
 
 	  <div class="container">
